# ImobIA

./: .dockerignore  .gitignore  Dockerfile  README.md  bia_main.py  create_env.py  docker-compose.yml  knowledge_base.txt  pyproject.toml  requirements.txt
agents/: agentes_mcp.py
interface/: app.py
tools/: search_tool.py
