[project]
name = "trabalho-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.130.0",
    "crewai-tools>=0.47.1",
    "mcp[cli]>=1.9.4",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.32.0",
    "langchain-openai>=0.0.9",
]

[build-system]
requires = ["hatchling"]
